# server/routes/userRoute.js
@@ -1,4 +1,4 @@
-const express = require("express");
+const express = require('express');
 const {
   signUp,
   signIn,
@@ -11,29 +11,39 @@ const {
   deleteUserById,
   getuserById,
   updateUserById,
-} = require("../controllers/userCtrl.js");
+} = require('../controllers/userCtrl.js');
 
 const {
   verifyToken,
   authorizedAdmin,
-} = require("../middlewares/verifyToken.js");
+} = require('../middlewares/verifyToken.js');
 
 const router = express.Router();
 //auth routes
-router.post("/signup", signUp);
-router.post("/signin", signIn);
-router.post("/google", google);
-router.get("/signout", signOut);
+router.post('/signup', signUp);
+router.post('/signin', signIn);
+router.post('/googleSignIn', google);
+router.get('/signout', signOut);
 
 //user routes
-router.put("/profile", verifyToken, updateUser);
-router.delete("/delete/:id", verifyToken, deleteUser);
-router.get("/profile", verifyToken, getUserProfile);
+router.put('/user/updateProfile', verifyToken, updateUser);
+router.delete('/user/delete/:id', verifyToken, deleteUser);
+router.get('/user/profile', verifyToken, getUserProfile);
 
 //admin routes
-router.get("/", verifyToken, authorizedAdmin, getAllUsers);
-router.delete("/:id", verifyToken, authorizedAdmin, deleteUserById);
-router.get("/:id", verifyToken, authorizedAdmin, getuserById);
-router.put("/:id", verifyToken, authorizedAdmin, updateUserById);
+router.get('/admin/allUsers', verifyToken, authorizedAdmin, getAllUsers);
+router.delete(
+  '/admin/deleteUser/:id',
+  verifyToken,
+  authorizedAdmin,
+  deleteUserById
+);
+router.get('/admin/user/:id', verifyToken, authorizedAdmin, getuserById);
+router.put(
+  '/admin/updateUser/:id',
+  verifyToken,
+  authorizedAdmin,
+  updateUserById
+);
 
 module.exports = router;
